# cargo-bundle

./: Cargo.toml  README.md
src/: bundle.rs  error.rs  main.rs
